Dropdown z-index fixed

--- a/styles/principal.css
+++ b/styles/principal.css
@@ -302,6 +302,8 @@ body .dropdown {
 
   background-color: var(--gray-3);
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.13);
+
+  z-index: 99999;
 }
 
 body .dropdown button {
